@@ -29,3 +29,6 @@ local/
 ## docker helpers
 docker/*sh
 docker/*/*.sh
+
+## Emacs
+*~
